# house-monitoring

./: .gitignore  readme.md
boxes-3d-printer/: arduinoBox.stl  arduino_bottom.stl  arduino_top.stl  sensor.fcstd1
receiver-transmitter/: CMakeLists.txt  run_transmitter.sh
receiver-transmitter/building-material/3d-printer/: receptor.fcstd1
receiver-transmitter/include/: house_transmitter.h  receiver_transmitter.h
receiver-transmitter/lib/LiquidCrystal/: LiquidCrystal.h
receiver-transmitter/lib/LiquidCrystal/src/: LiquidCrystal.cpp  Print.cpp
receiver-transmitter/lib/bcm2835-1.57/doc/: Makefile
receiver-transmitter/lib/bcm2835-1.57/src/: Makefile
receiver-transmitter/src/: house_transmitter.cpp  main.cpp  receiver_transmitter.cpp  zmq_client.cpp
receiver-transmitter2/: CMakeLists.txt  run_transmitter.sh
receiver-transmitter2/building-material/3d-printer/: receptor.fcstd
receiver-transmitter2/include/: house_transmitter.h
receiver-transmitter2/lib/LiquidCrystal/: Print.h
receiver-transmitter2/lib/bcm2835-1.57/: Makefile  config.status
receiver-transmitter2/lib/bcm2835-1.57/src/: test
receiver-transmitter2/src/: house_transmitter.cpp
sensor-transmitter/: schema.fzz
sensor-transmitter/building-material/3d-printer/: sensor.fcstd
sensor-transmitter/lib/RH-RF95/: RH_RF95.cpp  RH_RF95.h
sensor-transmitter/src/: main.cpp
server-monitoring/: CMakeLists.txt  Dockerfile  conf.json  install.md  sqlite_commands.sql  test.db
server-monitoring/include/: webserver.hpp
server-monitoring/src/: communicator.cpp  http_examples.cpp  webserver.cpp  zmq_client.cpp  zmq_server.cpp
server-monitoring/web/: index.html
server-monitoring/web/js/: render-vue.js
server-monitoring2/: Procfile  manage.py  requirements.txt
server-monitoring2/houseMonitoring/: asgi.py  settings.py  urls.py  wsgi.py
server-monitoring2/static/css/: style.css
server-monitoring2/static/js/: render-vue.js
server-monitoring2/staticfiles/js/: render-vue.js
server-monitoring2/temperature/: models.py  sensor_communication.py  urls.py  views.py
server-monitoring2/temperature/migrations/: 0001_initial.py
server-monitoring2/temperature/templates/: base.html  index.html
